Remove dependency on Sun's Base64 class so we can compile on Java version > 8